# asn1

./: .gitattributes  .gitignore  3gpp.ex  CNAME  Dockerfile  LICENSE  Makefile  Package.resolved  Package.swift  README.md  append_x_series.ex  asn1.ex  asn1scg.ex  asn2.ex  basic.ex  ca.crt  clean.sh  full_rebuild_from_zero.sh  gen_x509.exs  generate_mod_rs.ex  index.html  main.c  main.go  rebuild.sh  rebuild_c99.sh  rebuild_go.sh  rebuild_java.sh  rebuild_rust.sh  rebuild_swift.sh  rebuild_ts.sh  run_c99_openssl_tests.sh  run_go_openssl_tests.sh  run_java_openssl_tests.sh  run_openssl_tests.sh  run_swift_openssl_tests.sh  run_ts_openssl_tests.sh  verify.sh  verify_basic.sh  verify_c99.sh  verify_csm.sh  (+7 more)
.github/workflows/: c99.yml  ci.yml  go.yml  java.yml  rust.yml  swift.yml  typescript.yml
.windsurf/rules/: ans1-files-are-untochable.md
Compiler/: ASN1.ex  args.ex
Compiler/ASN1/: C99Emitter.ex  GoEmitter.ex  JavaEmitter.ex  RustEmitter.ex  SingleCrateGenerator.ex  SwiftEmitter.ex  TSEmitter.ex  WorkspaceGenerator.ex
Languages/AppleSwift/: ASN1Identifier.swift  Box.swift  EXTERNAL.swift  Package.swift  main.swift
Languages/C99/: Makefile  c99_client.c  dumpasn1.c  main.c  openssl_test.c
Languages/C99/Parser/: CMakeLists.txt  README.md  build_and_test.sh  generate_golden.sh
Languages/C99/Parser/include/asn1/: asn1.h  asn1_error.h  asn1_identifier.h  asn1_types.h
Languages/C99/Parser/src/: asn1_internal.h  asn1_parser.c  asn1_serializer.c  asn1_types.c
Languages/C99/Parser/test/: example_parse.c  test_golden.c  test_parser.c
Languages/C99/Parser/tests/golden/: bit_string.der  generalized_time.der  ia5_string.der  int_large.der  numeric_string.der  octet_string.der  printable_string.der  utc_time.der  utf8_string.der
Languages/Go/: go.mod  main.go  suite_test.go
Languages/Go/openssl_tests/: main.go
Languages/Java/: build.gradle  settings.gradle
Languages/Rust/: Cargo.toml
Languages/Rust/examples/: ca_client.rs  cert_parser.rs
Languages/Rust/tests/: certificate_parse.rs  openssl_tests.rs  probe_serialize.rs  roundtrip.rs
Languages/TypeScript/: main.ts  openssl_test.ts  package.json
Sources/: ASN1Identifier.swift
Sources/ASN1SCG/: A.swift  AccessDescription.swift  Ack.swift  AddRequest.swift  AdministrationDomainName.swift  AlgorithmIdentifier.swift  AttCertIssuer.swift  AttCertValidityPeriod.swift  AttCertVersion.swift  Attribute.swift  AttributeTypeAndValue.swift  AttributeValueAssertion.swift  Auth.swift  AuthType.swift  AuthenticationChoice.swift  AuthorityKeyIdentifier.swift  BasicConstraints.swift  BindRequest.swift  BindResponse.swift  BuiltInDomainDefinedAttribute.swift  BuiltInStandardAttributes.swift  CHATMessage.swift  CHATProtocol.swift  CMSVersion.swift  CRLReason.swift  Certificate.swift  CertificateList.swift  CompareRequest.swift  Contact.swift  ContactStatus.swift  ContentInfo.swift  Control.swift  CountryName.swift  Criteria.swift  CrlOcspRef.swift  DSTU4145Params.swift  DSTU4145Params_definition_Choice.swift  DirectoryString.swift  DisplayText.swift  DistributionPoint.swift  (+153 more)
Sources/C99/: Makefile  test_suite  test_suite.c
Sources/Suite/: ASN1Identifier.swift  Box.swift  CMSCLI.swift  OIDExtensions.swift  main.swift
Sources/Suite/ASN1SCG/: Accuracy.swift  Ack.swift  AddRequest.swift  AlgorithmIdentifier.swift  Attribute.swift  AttributeTypeAndValue.swift  AttributeValueAssertion.swift  Auth.swift  AuthType.swift  AuthenticationChoice.swift  BinaryField.swift  (+243 more)
Specifications/3gpp/: Attribute-ASN1Module.asn1  Basic-Service-Elements.asn1  MAP-ApplicationContexts.asn  MAP-BS-Code.asn  MAP-CH-DataTypes.asn1  MAP-CallHandlingOperations.asn  MAP-CommonDataTypes.asn1  MAP-DialogueInformation.asn  MAP-ER-DataTypes.asn  MAP-Errors.asn1  MAP-ExtensionDataTypes.asn  MAP-GR-DataTypes.asn  MAP-Group-Call-Operations.asn1  MAP-LCS-DataTypes.asn1  MAP-LocationServiceOperations.asn  MAP-MS-DataTypes.asn  MAP-MobileServiceOperations.asn  MAP-OM-DataTypes.asn  MAP-OperationAndMaintenanceOperations.asn1  MAP-Protocol.asn1  MAP-SM-DataTypes.asn  MAP-SS-Code.asn1  MAP-SS-DataTypes.asn  MAP-ShortMessageServiceOperations.asn  MAP-SupplementaryServiceOperations.asn  MAP-TS-Code.asn1  SS-DataTypes.asn1  SS-Errors.asn  SS-Operations.asn  SS-Protocol.asn1  TS24007L3.asn1  TS24008IES.asn  TS24008Msgs.asn  TS24011IES.asn  TS24011Msgs.asn  TS24301IES.asn1  TS24301Msgs.asn  TS24501IES.asn  TS24501Msgs.asn1  TS44018IES.asn  (+1 more)
Specifications/basic/: DSTU.asn1
Specifications/lte/: EUTRA-InterNodeDefinitions.asn1  EUTRA-RRC-Definitions.asn1  EUTRA-Sidelink-Preconf.asn1  EUTRA-UE-Variables.asn1  NBIOT-InterNodeDefinitions.asn1  NBIOT-RRC-Definitions.asn1  NBIOT-UE-Variables.asn1  NR-InterNodeDefinitions.asn1  NR-RRC-Definitions.asn1  NR-Sidelink-DiscoveryMessage.asn1  NR-Sidelink-Preconf.asn1  NR-UE-Variables.asn1  PC5-RRC-Definitions.asn1
Specifications/mhs/: IPMSForwardedContentBodyPartType.asn1  MHSDirectoryObjectsAndAttributes.asn1  MHSObjectIdentifiers.asn1  MHSRoutingDirectoryObjects.asn1  MHSRoutingORAddressSubtree.asn1  MHSRoutingObjectIdentifiers.asn1  MSAbstractService.asn1  MSGeneralAttributeTypes.asn1  MSGeneralAutoActionTypes.asn1  MSMatchingRules.asn1  MSObjectIdentifiers.asn1  MSUpperBounds.asn1  MTAAbstractService.asn1  MTSAbstractService.asn1  MTSAbstractService88.asn1  MTSObjectIdentifiers.asn1  MTSUpperBounds.asn1
Specifications/suite/: SUITE-EXPLICIT.asn1  SUITE-IMPLICIT.asn1
asn1_suite/: Cargo.toml
asn1_suite/src/: lib.rs  main.rs  probe.rs
asn1_suite/tests/: probe_serialize.rs  roundtrip.rs
go_project/: main.go
lib/: ASN1.ex
lib/ASN1/: C99Emitter.ex  Emitter.ex  GoEmitter.ex  RustEmitter.ex  SwiftEmitter.ex
priv/: go_registry.etf
priv/apple/: List.asn1  PKIX1Explicit88.asn1
priv/basic/: CHAT.asn1  DSTU.asn1  KEP.asn1  List.asn1  Nested.asn1  PKIX1Explicit88.asn1
priv/mc/: asn1.syntax
priv/minimal/: PKIX1Explicit88.asn1
scripts/: clean.sh  rebuild_go.sh  rebuild_swift.sh  run_c99_openssl_tests.sh  run_rust_openssl_tests.sh  verify_c99.sh  verify_go.sh  verify_java.sh  verify_rust.sh  verify_swift.sh  verify_ts.sh
(+5467 files in other folders)
