[package]
name = "asn1_suite"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["ASN1 Generator"]

[dependencies]
rust-asn1 = { git = "https://github.com/iho/rust-asn1.git" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
